# polarbear

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README-zh.md  README.md  package-lock.json  package.json  rebuild.sh
.github/workflows/: quality.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  ErrorBoundary.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_zoom.rs  cloud_sync_store.rs  ipc_contracts.rs  main.rs  native_pinch.rs  secret_store.rs
apps/desktop/src/app/layout/: AboutPolarbearDialog.tsx  AppShell.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
apps/desktop/src/commands/: appCommandRegistry.test.ts  appCommandRegistry.ts  commandState.test.ts  commandState.ts  commandTarget.test.ts  commandTarget.ts  keybindingResolver.test.ts  keybindingResolver.ts  useAppShortcuts.ts  useNativeAppMenu.ts
apps/desktop/src/components/diagrams/: MermaidBlock.tsx  PlantUmlBlock.tsx  diagramExport.ts  mermaidDiagramConfig.ts
apps/desktop/src/components/editor/: InsertCodeFenceDialog.tsx  InsertTableDialog.tsx  LiveMarkdownEditor.tsx  LiveZoomController.ts  MarkdownEditor.tsx  MarkdownImage.tsx  MarkdownPreview.tsx  TyporaLiveEditor.tsx  diagramExport.ts
apps/desktop/src/components/layout/: AboutPolarbearDialog.tsx  AppShell.tsx  Sidebar.tsx  StatusBar.tsx  (+1 more)
apps/desktop/src/i18n/: I18nProvider.tsx
apps/desktop/src/markdown/: applyMarkdownFormat.ts  splitMarkdownIntoSegments.ts
apps/desktop/src/model/: AppCommand.ts  PluginDescriptor.ts  WorkspaceFile.ts
apps/desktop/src/repository/: RepositoryDialogs.tsx  repositoryApi.ts
apps/desktop/src/styles/: base.css  code-blocks.css  live-codemirror.css  live-editor.css  markdown-preview.css
apps/desktop/src/tauri/: externalLinks.ts  windowCommands.ts  workspaceCommands.ts
apps/desktop/src/theme/: themeTokens.ts
apps/desktop/src/zoom/: AppZoomManager.ts
crates/polarbear-core/: Cargo.toml
crates/polarbear-core/src/: lib.rs  markdown.rs  plugin.rs  secret.rs  settings.rs  sync.rs
crates/polarbear-tauri/: Cargo.toml
crates/polarbear-tauri/src/: lib.rs  main.rs
scripts/: build-desktop.mjs  check-frontend-content.mjs  check-typescript-syntax.mjs
(+124 files in other folders)
