[package]
name = "polarbear-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tauri adapter layer for the Polarbear desktop app."

[dependencies]
polarbear-core = { path = "../polarbear-core" }

[[bin]]
name = "polarbear"
path = "src/main.rs"
