[package]
name = "polarbear-desktop"
version = "0.1.0"
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
keyring = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
urlencoding = "2"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
    "NSGestureRecognizer",
    "NSMagnificationGestureRecognizer",
    "NSView"
] }
objc2-foundation = { version = "0.3.2", features = [
    "NSGeometry",
    "NSObject"
] }
